# hello-world

./: 0-Project Management.md  1-5-ML.md  10-15-Gradient Descent.md  10-Gradient Descent.md  16-18Multiple Features.md  16-Multiple Features.md  6-experiment-house price prediction.md  6-experiment.md  6-hw  6-hw.md  6-linear regression.md  7-cost function.md  7-experiment-cost function.md  7-experiment.md  7.md  ML7-9-Cost Function.md  ML7-experiment.md  README.md  first_demo.txt  git.md  lab02-7-experiment-cost function.md  lab03-10-Gradient Descent for Linear Regression.md  lab04-17-Vectorization.md  linear regression.md  lr  note.txt  note2.txt
experiments/Boston-House-Price-Prediction/: README.md  boston_house_price_prediction.py  main.py  plotting.py  pyproject.toml
ff_unit_1_folder_1/: ff_unit_1_folder_1_demo_1.txt  ff_unit_1_folder_1_demo_2.txt
leason1/: demo.txt
unit2/: learn_tensor.py
yy_unit1/: learn_tensor.py
