[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "boston-house-price-prediction"
version = "0.1.0"
description = "Statistical analysis pipeline for the Boston housing price dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.23",
    "pandas>=1.5",
    "seaborn>=0.12",
    "scikit-learn>=1.1",
    "scipy>=1.9",
    "statsmodels>=0.13",
]

[project.scripts]
boston-house-price-prediction = "boston_house_price_prediction:main"

[tool.setuptools]
py-modules = ["boston_house_price_prediction"]
